# Pocket-Dictionaries-Benchmarks

./: CMakeLists.txt  main.cpp  pd512.cpp  pd512.hpp  tests.cpp  tests.hpp  utils.cpp  utils.hpp  validate.cpp  validate.hpp
pd_plus/: main.cpp  pd512_plus.cpp  pd512_plus.hpp  v_tests.cpp  v_tests.hpp
pd_validation/: validation_tests.h
